--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@
 ################################################################################
 
 /.vs
+/CepelWeb/bin
+/CepelWeb/obj/Debug
+/Data
+/Dominio/obj/Debug
+/Dominio/bin/Debug
+/packages
